--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
   }
   
   .estudante {
-    background-color: #2df788;
+    background-color: #f72d99;
     padding: 24px 0;
     text-align: center;
   }
